Mobile overflow fix #3

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body {
 }
 
 #mobile-wrapper {
+	width: 100%;
 	overflow-x: hidden;
 }
 
